--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<iframe frameborder="0" width="100%" height="500px" src="replit.com/@Ducci9129/RadiantBrowserReplit?v=1?embed=true"></iframe>
+<iframe
+  frameborder="0"
+  width="100%"
+  height="500px"
+  src="https://replit.com/@Ducci9129/RadiantBrowserReplit?embed=true"
+></iframe>
