--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <iframe
   frameborder="0"
   width="100%"
-  height="500px"
+  height="100%"
   src="https://replit.com/@Ducci9129/RadiantBrowserReplit?embed=true"
 ></iframe>
 
